# APAM

./: README.md
MPI/: APAM_LeNet5.cpp  CMakeLists.txt  README.md
MPI4PY/: README.md  cifar10_allcnn_artifical_maxdelay.py  main_apam.py  optim_and_train_apam.py  plot_CINIC_async_gpu_different_workers.py  plot_CINIC_async_sync_cpu_time_compare.py  plot_cifar10_maxdelay.py  plot_imagenet32_async_gpu_different_workers.py  plot_imagenet32_async_sync_cpu_time_compare.py  read_datasets.py  readme.txt  run_all.sh  run_artifical_delay.sh  run_training_larger_datasets.sh  run_training_larger_datasets.sh.sh
MPI4PY/data/: about_data.txt  check_the_datasets.sh  data_description.txt
MPI4PY/models/: __init__.py  all_cnn_cifar.py  resnet_pytorch.py  wideresnet.py
OpenMP/: README.md
OpenMP/include/: algebra.h  randsample.h  util.h
OpenMP/src/: algebra.cc
OpenMP/test/: LR_APAM.cc  Makefile
